--- a/europa.html
+++ b/europa.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="styles.css">
     <title>Europa</title>
     <style>
+    @font-face{
+        font-family: 'BELLABOO-Regular';   /*'Oswald'*/
+        /*src: url('BELLABOO.eot');*/;
+        src:url('BELLABOO-Regular.ttf') format('opentype'); 
+
+      }
+
+    @font-face{
+        font-family: 'REIS-regular';
+        src:url('REIS-regular.ttf') format('opentype');
+      }
       html, body, #map-canvas {
         height: 100%;
         margin: 10px;
@@ -31,11 +42,11 @@
         margin: 1em 0 0.5em 0;
         color: rgb(241,240,235);
         font-weight: normal;
-        font-family: 'Oswald', sans-serif;   
-        font-size: 46px;
+        font-family: 'BELLABOO-Regular';   /*'Oswald'*/
+        font-size: 61px;
         line-height: 42px;
         text-transform: uppercase;
-        text-shadow: 0 2px black, 0 3px #777 ;
+        /* text-shadow: 0 2px black, 0 3px #777 ; */
       }
       .explicacion {
         margin-left: 12px;
@@ -43,7 +54,7 @@
         font-weight: normal;
         font-size: 22px;
         line-height: 40px;
-        font-family: 'Orienta', sans-serif;
+        font-family: 'REIS-regular', sans-serif;
 /*        margin: 1em 0 0.5em 0;
         color: rgb(241,240,235);
         font-size: 22px;
