--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
    <link rel="stylesheet" href="styles.css">
     <title>Viajes hacia y desde Chile</title>
     <style>
+      @font-face{
+        font-family: 'BELLABOO-Regular';   /*'Oswald'*/
+        /*src: url('BELLABOO.eot');*/;
+        src:url('BELLABOO-Regular.ttf') format('opentype'); 
+
+      }
+
+      @font-face{
+        font-family: 'REIS-regular';
+        src:url('REIS-regular.ttf') format('opentype');
+      }
+
       html, body, #map-canvas {
         height: 100%;
         margin: 10px;
@@ -32,27 +44,29 @@
         margin: 1em 0 0.5em 0;
         color: rgb(241,240,235);
         font-weight: normal;
-        font-family: 'bellabo', sans-serif;   /*'Oswald'*/
-        src: url('BELLABOO.eot');
-        url('BELLABOO-Regular.ttf') format('truetype'),  
-        font-size: 46px;
+        font-family: 'BELLABOO-Regular';   /*'Oswald'*/
+        font-size: 61px;
         line-height: 42px;
         text-transform: uppercase;
-        text-shadow: 0 2px black, 0 3px #777 ;
+        /* text-shadow: 0 2px black, 0 3px #777 ; */
+
+
+
       }
       .explicacion {
+        font-family: 'REIS-regular', sans-serif;
         margin-left: 12px;
         color: rgb(220,220,220);
         font-weight: normal;
         font-size: 22px;
         line-height: 40px;
-        font-family: 'Orienta', sans-serif;
-
       }
       footer {
         color: rgb(220,220,220);
-        font-family: 'Orienta', sans-serif;
+        font-family: 'calibri', sans-serif;
         margin-left: 12px;
+        font-size: 17px;
+        text-align: right;
         margin-bottom: 10px;
       }
       .footer2{
