--- a/africa.html
+++ b/africa.html
@@ -22,7 +22,7 @@
         font-family: 'REIS-regular';
         src:url('REIS-regular.ttf') format('opentype');
       }
-      
+
       html, body, #map-canvas {
         height: 100%;
         margin: 10px;
@@ -70,8 +70,9 @@
         color: rgb(220,220,220);
         font-family: 'calibri', sans-serif;
         margin-left: 12px;
+        font-size: 17px;
+        text-align: right;
         margin-bottom: 10px;
-        padding-bottom: 20px;
       }
 
 
@@ -184,7 +185,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <h1>Viajes hacia y desde Chile</h1>  
     </header>
     <section>
-    <p class="explicacion">Los circulo en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
+    <p class="explicacion">Los circulos en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
     <div id='cssmenu'>
       <ul>
         <li><a href="index.html" title="Mundo">Mundo</a></li>
