--- a/europa.html
+++ b/europa.html
@@ -67,11 +67,11 @@
       }
       footer {
         color: rgb(220,220,220);
-        font-family: 'Orienta', sans-serif;
+        font-family: 'calibri', sans-serif;
         margin-left: 12px;
-        padding-bottom: 20px;
+        font-size: 17px;
+        text-align: right;
         margin-bottom: 10px;
-        padding-bottom: 20px;
       }
 
 
@@ -184,7 +184,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <h1>Viajes hacia y desde Chile</h1>  
     </header>
     <section>
-    <p class="explicacion">Los circulo en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
+    <p class="explicacion">Los circulos en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
     <div id='cssmenu'>
       <ul>
         <li><a href="index.html" title="Mundo">Mundo</a></li>
