--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <h1>Viajes hacia y desde Chile</h1>  
     </header>
     <section>  
-    <p class="explicacion">Los circulo en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
+    <p class="explicacion">Los circulos en el mapa represetan por su tamaño la relacion de la cantidad de personas que viajan desde el pais de origen por la  poblacion total de ese pais<p>  
     <div id='cssmenu'><!-- class="navbar" -->
       <ul>
         <li class='active' ><a href="index.html" title="Mundo">Mundo</a></li>
